完善了go-ping的错误处理代码
