# go-im/gin-chat/router/router.go
@@ -11,9 +11,17 @@ import (
 
 func Router() *gin.Engine {
 	r := gin.Default()
-	docs.SwaggerInfo.BasePath = ""
-	r.GET("/swagger/*any", ginSwagger.WrapHandler(swaggerFiles.Handler))
+	swaggerRouter(r)
 	r.GET("/index", service.GetIndex)
 	r.GET("/user/list", service.GetUserList)
+	r.GET("/user/create", service.CreateUser)
+	r.GET("/user/delete", service.DeleteUser)
+	r.POST("/user/update", service.UpdateUser)
+	r.GET("/user/find", service.FindUser)
 	return r
+}
+
+func swaggerRouter(r *gin.Engine) {
+	docs.SwaggerInfo.BasePath = ""
+	r.GET("/swagger/*any", ginSwagger.WrapHandler(swaggerFiles.Handler))
 }
